--- a/package.json
+++ b/package.json
@@ -48,7 +48,11 @@
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "enzyme": "^3.11.0",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.8",
